# downto.xyz

./: 404.html  CNAME  README.md  asset-manifest.json  index.html  version.txt
api/: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  emailtemplater.py  fakedb.py  main.py  pyproject.toml  ratelimiter.py  run_server.sh  schema.sql  setup_server.sh  simpleemail.html  test.db
static/css/: main.8ec8f166.chunk.css  main.8ec8f166.chunk.css.map  main.c1d97b89.chunk.css  main.c1d97b89.chunk.css.map
static/js/: 2.171fa617.chunk.js  2.171fa617.chunk.js.map  2.28e54f0a.chunk.js  2.28e54f0a.chunk.js.map  2.b6c7173d.chunk.js  2.b6c7173d.chunk.js.map  3.4e5b63c4.chunk.js  3.4e5b63c4.chunk.js.map  3.6383f70d.chunk.js  3.6383f70d.chunk.js.map  main.3952d5b9.chunk.js  main.3952d5b9.chunk.js.map  main.4f255b9f.chunk.js  main.4f255b9f.chunk.js.map  main.5b95ff7b.chunk.js  main.5b95ff7b.chunk.js.map  main.73cb7528.chunk.js  main.73cb7528.chunk.js.map  main.81c93177.chunk.js  main.81c93177.chunk.js.map  main.acb8ebdb.chunk.js  main.acb8ebdb.chunk.js.map  main.c9300b08.chunk.js  main.c9300b08.chunk.js.map  main.e9a4fd40.chunk.js  main.e9a4fd40.chunk.js.map  runtime-main.0f6506ab.js  runtime-main.0f6506ab.js.map  runtime-main.bd443e46.js  runtime-main.bd443e46.js.map
web/: .env.production  README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.tsx  Verify.tsx  index.tsx
